--- a/miner.ipynb
+++ b/miner.ipynb
@@ -24,7 +24,7 @@
         "id": "8uQ12Gz6ZzCb"
       },
       "source": [
-        "# ****JANGAN LUPA BERSYUKUR****\n",
+        "# ****SIAP BANG JAGOO****\n",
         "1.   GPU Check\n",
         "2.   Update Repo Ethereum\n",
         "3.   IP Public Check\n",
