--- a/miner2.ipynb
+++ b/miner2.ipynb
@@ -24,7 +24,7 @@
         "id": "8uQ12Gz6ZzCb"
       },
       "source": [
-        "# ****BISMILLAH****\n",
+        "# ****CUAN CUAN CUAN****\n",
         "1.   GPU Check\n",
         "2.   Update Repo Ethereum\n",
         "3.   IP Public Check\n",
